--- a/test.env
+++ b/test.env
@@ -3,3 +3,8 @@ POSTGRES_PORT=15432
 POSTGRES_DB=rates_service
 POSTGRES_USER=rates_service
 POSTGRES_PASSWORD=password
+NORM_POSTGRES_HOST=localhost
+NORM_POSTGRES_PORT=15432
+NORM_POSTGRES_DB=test
+NORM_POSTGRES_USER=rates_service
+NORM_POSTGRES_PASSWORD=password
